# aptos-apt360

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  apt  apt360.sln  apt360.vcproj  callpost  cl.tap  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  poc.tap  postprocess  pro.tap  unsyn.pl
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile  Makefile.am  Makefile.in  Section1ErrorCodes.html  a2ctrl.html  acntrl.html  adfpre.html  apt360document.webprj  aptos4.ims  aptpos.html  ascntl.html  index.html  notes.txt  program_notes.html  samplePart.apt  samplePart.apt.html  sectn3.html  surface_defs.html  tutorial.html  tutorial1.html  tutorial2.html
doc/manual/: Makefile.am  Makefile.in  additional_geom_words.html  apt360.css  apt_control_words.html  arelem_requirements.html  aux_symbol_def.html  call_by_name_val.html  canon_forms.html  canon_kw.html  circle_canon.html  circle_kw.html  comp_subscr_vars.html  cone_canon.html  cone_kw.html  copy_index.html  cut_surf_relate.html  cutpath_xform.html  cylndr_canon.html  cylndr_kw.html  diag_aids.html  diagnostic_procedures.html  elipse_canon.html  ellips_kw.html  expanded_tol_stmnt.html  gconic_canon.html  gconic_kw.html  geometry.html  godlta_kw.html  goto_kw.html  hyperb_canon.html  hyperb_kw.html  index.html  intro.html  io_stmnts.html  language_and_syntax.html  lconic_canon.html  lconic_kw.html  line_canon.html  line_kw.html  (+62 more)
doc/manual/images/: Makefile.am  Makefile.in
examples/: 3axis_contour.apt  Makefile  Makefile.am  Makefile.in  arrayPock.apt  ballInCage.apt  case4axis.apt  caseRing.apt  cone.apt  diamondCase.apt  hrw1111ps.apt  ln1000.apt  multax.apt  multest.apt  oring_groove.apt  patern.apt  plane_cant.apt  pocket.apt  postPwords.apt  race_4th.apt  race_4th_2.apt  sample.pro  sample2.apt  seqNo.apt  sine.apt  slotarray.apt  sphere.apt  spirograph.apt  spool.apt  spool2.apt  spoolLT.apt  square.apt  stock2.apt  tabcyl.apt  test.apt  test2.apt  test3.apt  testruled.apt  vcase.apt  window.apt
libf2c/: Makefile  Makefile.am  Makefile.in  c_cos.c  c_exp.c  c_log.c  c_sin.c  c_sqrt.c  endfile.c  err.c  fio.h  libf2c.vcproj  open.c
maclib/: Makefile  Makefile.am  Makefile.in  STRTUP  TEST  TLEND  readme
orig_source/: A2CTRL.FOR  ABKKPR.FOR  ABTSHL.ASM  ABUFTP.ASM  ABUILD.ASM  ACALSP.FOR  ACANCK.FOR  ACANGT.FOR  ACANPT.FOR  ACCALL.FOR  ACCINT.FOR  ACCURV.FOR  ACENTR.FOR  ACHECK.FOR  ACHEDT.ASM  ACIRCL.FOR  ACLAS5.FOR  ACLAS7.FOR  ACLS12.FOR  ACNTR2.FOR  ACNTRL.FOR  ACONE1.FOR  ACOS.FOR  ACPLAN.FOR  ACPYTP.FOR  ACRDPN.ASM  ACROSS.FOR  ACSCF.FOR  ACYLND.FOR  ADCLAR.FOR  ADDCR.BAS  ADDST.FOR  ADDSTR.FOR  ADDTB.FOR  ADECIS.FOR  ADELTA.FOR  ADFPRE.FOR  ADFPRL.ASM  ADFPRO.FOR  ADIAGM.FOR  (+268 more)
py_utils/: read_tap
src/: A2CTRL.c  ABKKPR.c  ABTSHL.ASM.c  ABUFTP.ASM.c  ABUILD.ASM.c  ACALSP.c  ACANCK.c  ACANGT.c  ACANPT.c  ACCALL.c  ACCINT.c  ACCURV.c  ACENTR.c  ACHECK.c  ACHEDT.ASM.c  ACIRCL.c  ACLAS5.c  ACLAS7.c  ACLS12.c  ACNTR2.c  ACNTRL.c  ACONE1.c  ACOS.c  ACPLAN.c  ACPYTP.c  ACRDPN.ASM.c  ACROSS.c  ACSCF.c  ACYLND.c  ADCLAR.c  ADDST.c  ADDSTR.c  ADDTB.c  ADECIS.c  ADELTA.c  ADFPRE.c  ADFPRL.ASM.C  ADFPRL.ASM.S  ADFPRO.c  ADIAGM.c  (+283 more)
src/.deps/: A2CTRL.Po  ABKKPR.Po  ABTSHL.ASM.Po  ABUFTP.ASM.Po  ABUILD.ASM.Po  ACALSP.Po  ACANCK.Po  ACANGT.Po  ACANPT.Po  ACCALL.Po  ACCINT.Po  ACCURV.Po  ACENTR.Po  ACHECK.Po  ACHEDT.ASM.Po  ACIRCL.Po  ACLAS5.Po  ACLAS7.Po  ACLS12.Po  ACNTR2.Po  ACNTRL.Po  ACONE1.Po  ACOS.Po  ACPLAN.Po  ACPYTP.Po  ACRDPN.ASM.Po  ACROSS.Po  ACSCF.Po  ACYLND.Po  ADCLAR.Po  ADDST.Po  ADDSTR.Po  ADDTB.Po  ADECIS.Po  ADELTA.Po  ADFPRE.Po  ADFPRO.Po  ADIAGM.Po  ADIAGP.Po  ADOT.Po  (+266 more)
vim/: Makefile  Makefile.am  Makefile.in  README  filetype.vim
vim/syntax/: Makefile  Makefile.am  Makefile.in  apt.vim
