## Process this file with automake to produce Makefile.in
 
SUBDIRS=libf2c src doc maclib orig_source examples vim 
DIST_SUBDIRS=src doc maclib orig_source examples vim libf2c
bin_SCRIPTS=apt callpost
EXTRA_DIST=apt callpost
#edit=sed  's,@bindir\@,$(bindir),g' 

#postprocess: Makefile $(top_builddir)/postprocess.in
#	rm -f postprocess postprocess.tmp
#	$(edit) $(top_builddir)/postprocess.in >postprocess.tmp
#	chmod +x postprocess.tmp
#	mv postprocess.tmp postprocess

