dnl  Process this file with autoconf to produce a  configure script.
AC_INIT([Apt360], [1.0.1], [crotchet@sourceforge.net])
AM_INIT_AUTOMAKE([apt360], [1.0.1], [crotchet@sourceforge.net])
AC_CONFIG_HEADER(config.h)

dnl  Checks for programs.
AC_PROG_CXX
CFLAGS='-g -O0' dnl optimizing causes problems
AC_PROG_CC
AC_PROG_CPP
AM_PROG_AS
dnl  Checks for libraries.

AC_CHECK_LIB([m], [fabs],,[AC_MSG_ERROR([could not find math libraries])])
AC_CHECK_LIB([gslcblas],[main])
AC_CHECK_LIB([gsl], [gsl_poly_solve_cubic],,
	[AC_MSG_WARN([no gsl library- you will not be able to use the TABCYL command])])



dnl f2c uses it's own "MAIN__" function, so AC_CHECK_LIB does not work
savelibs=$LIBS
LIBS="-lf2c  $LIBS"
AC_MSG_CHECKING(for f2c library)
AC_LINK_IFELSE([AC_LANG_PROGRAM(
		
		#ifdef __cplusplus
		extern "C"
		#endif
		char do_fio ();
		MAIN__ (){
			do_fio(); }
		
)],[ AC_MSG_RESULT([yes])
	LIBS=$savelibs
],[ AC_MSG_RESULT([no])
	AC_MSG_ERROR([could not find f2c libraries])
])

dnl  Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([errno.h float.h limits.h stdlib.h string.h unistd.h])
AC_CHECK_HEADERS([f2c.h],,
	[AC_MSG_ERROR([could not find f2c headers])])
AC_LANG([C++])

AC_CHECK_HEADERS([gsl/gsl_poly.h])

dnl  Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl  Checks for library functions.
AC_FUNC_FORK
AC_FUNC_STRFTIME
AC_CHECK_FUNCS([rint sqrt strerror])


AC_PROG_MAKE_SET
AC_PROG_INSTALL

AC_C_BIGENDIAN([AC_MSG_ERROR([big-endian machines not currently supported])], ,])

for each in $CFLAGS
do
	if test $each = -O1 || test $each = -O2 || test $each = -O3 
	then
		AC_MSG_WARN([your CFLAGS variable has optimizing turned on\
-this may break the code])
	fi
done

AC_SUBST(absolute_build_dir,[$PWD])

AC_OUTPUT(Makefile src/Makefile doc/Makefile maclib/Makefile orig_source/Makefile \
	  examples/Makefile vim/Makefile vim/syntax/Makefile doc/manual/Makefile \
  doc/manual/images/Makefile)
	

