
DIST_SUBDIRS=manual

EXTRA_DIST= a2ctrl.html acntrl.html apt360document.webprj aptos4.ims \
aptpos.html ascntl.html index.html notes.txt obj10geo13shd5pg1p4.png \
obj3pg1geo8p4.png obj5pg1geo5p4.png obj84geo121shd1pg1p4.png \
obj89geo128shd3pg1p4.png sectn3.html surface_defs.html yelgridl.jpg \
adfpre.html notes.txt program_notes.html samplePart.apt \
samplePart.apt.html Section1ErrorCodes.html sectn3.html \
tutorial1.html tutorial2.html tutorial.html
