EXTRA_DIST= \
case4axis.apt \
postPwords.apt \
sample.pro \
sample2.apt \
seqNo.apt \
sine.apt \
slotarray.apt \
spool.apt \
spool2.apt \
spoolLT.apt \
test.apt \
test2.apt \
test3.apt \
multest.apt \
window.apt \
3axis_contour.apt \
arrayPock.apt \
ballInCage.apt \
caseRing.apt \
cone.apt \
diamondCase.apt \
hrw1111ps.apt \
ln1000.apt \
multax.apt \
oring_groove.apt \
patern.apt \
plane_cant.apt \
pocket.apt \
race_4th.apt \
race_4th_2.apt \
sphere.apt \
spirograph.apt \
square.apt \
stock2.apt \
tabcyl.apt \
testruled.apt \
vcase.apt
