EXTRA_DIST= \
A2CTRL.FOR \
ABKKPR.FOR \
ABTSHL.ASM \
ABUFTP.ASM \
ABUILD.ASM \
ACALSP.FOR \
ACANCK.FOR \
ACANGT.FOR \
ACANPT.FOR \
ACCALL.FOR \
ACCINT.FOR \
ACCURV.FOR \
ACENTR.FOR \
ACHECK.FOR \
ACHEDT.ASM \
ACIRCL.FOR \
ACLAS5.FOR \
ACLAS7.FOR \
ACLS12.FOR \
ACNTR2.FOR \
ACNTRL.FOR \
ACONE1.FOR \
ACOS.FOR \
ACPLAN.FOR \
ACPYTP.FOR \
ACRDPN.ASM \
ACROSS.FOR \
ACSCF.FOR \
ACYLND.FOR \
ADCLAR.FOR \
ADDCR.BAS \
ADDST.FOR \
ADDSTR.FOR \
ADDTB.FOR \
ADECIS.FOR \
ADELTA.FOR \
ADFPRE.FOR \
ADFPRL.ASM \
ADFPRO.FOR \
ADIAGM.FOR \
ADIAGP.FOR \
ADOT.FOR \
ADPRNT.ASM \
ADPRNT.FOR \
ADSCF.FOR \
ADYNDP.ASM \
AELHYP.FOR \
AELP01.FOR \
AERR.FOR \
AEXPRS.FOR \
AEXTRC.ASM \
AFINI.FOR \
AFLAGS.FOR \
AFRDNL.ASM \
AFRESH.ASM \
AFWDSL.FOR \
AGENCN.FOR \
AGENPL.FOR \
AGETSP.FOR \
AGOUCK.FOR \
AGTARG.FOR \
AGTSUB.FOR \
AHELPR.FOR \
AHYPR1.FOR \
AIFUN8.FOR \
AINOUT.FOR \
AINT.FOR \
AINVRT.FOR \
AJUNDD.FOR \
ALCINT.FOR \
ALFTCN.FOR \
ALINE.FOR \
ALLINT.FOR \
ALNGTH.FOR \
ALSFPT.FOR \
AMATM.FOR \
AMATMV.FOR \
AMATX.FOR \
AMD2.FOR \
AMIND.FOR \
AMON1.FOR \
AMON10.FOR \
AMON11.FOR \
AMON2.FOR \
AMON3.FOR \
AMON4.FOR \
AMON5.FOR \
AMON6.FOR \
AMON7.FOR \
AMON8.FOR \
AMONTR.FOR \
AMOTIN.FOR \
AMOVE.FOR \
ANAMLT.FOR \
ANEST.FOR \
ANORM.FOR \
ANRMAL.FOR \
AOBTAN.FOR \
AOFSET.FOR \
AORDP.FOR \
APARAM.FOR \
APAREN.FOR \
APLAN.FOR \
APLANE.FOR \
APLCN.FOR \
APLCNA.FOR \
APLCNB.FOR \
APLNEX.FOR \
APOCK.FOR \
APOCK1.FOR \
APOCKA.FOR \
APOCKB.FOR \
APOINT.FOR \
APOLYR.ASM \
APREAD.ASM \
APREPA.FOR \
APREPB.FOR \
APREPC.FOR \
APREPD.FOR \
APREPR.FOR \
APRFIX.FOR \
APRINT.FOR \
APTLFT.FOR \
APTLNK.ASM \
APTLOD.FOR \
APTPUT.FOR \
AQADR1.FOR \
AQUAD.FOR \
ARADAR.FOR \
AREAD.FOR \
AREGPR.FOR \
AREPRE.FOR \
ARFSYS.FOR \
ARGLST.FOR \
ARITAP.FOR \
ARLDS.FOR \
ARLDSF.FOR \
ARLM2.FOR \
ARLM3.FOR \
AROUTE.FOR \
ARPDIS.FOR \
ARROW.FOR \
ARTIME.ASM \
ASCAN.FOR \
ASCHTB.FOR \
ASCLPT.FOR \
ASCNTL.FOR \
ASEC2.FOR \
ASEC2A.FOR \
ASEC2B.FOR \
ASEC2C.FOR \
ASEC2D.FOR \
ASECT0.ASM \
ASECT1.ASM \
ASECT2.ASM \
ASECT3.ASM \
ASECT4.ASM \
ASEGMT.FOR \
ASELP.FOR \
ASEQAL.FOR \
ASERCH.ASM \
ASETUP.FOR \
ASIMEQ.FOR \
ASPHER.FOR \
ASQILT.FOR \
ASTOR.FOR \
ASTORE.FOR \
ASTOS.FOR \
ASTRUP.FOR \
ASTSEL.FOR \
ASTUF.FOR \
ASTUP2.FOR \
ASTYPE.FOR \
ASWICH.FOR \
ASYCTL.FOR \
ATABCR.FOR \
ATABLN.FOR \
ATABPT.FOR \
ATAPE.FOR \
ATAPOP.ASM \
ATAPRD.ASM \
ATAPWT.ASM \
ATAPXC.ASM \
ATBLKP.ASM \
ATDL.FOR \
ATFMQD.FOR \
ATFMVC.FOR \
ATINKR.FOR \
ATISEL.FOR \
ATLNRM.FOR \
ATLSEG.FOR \
ATLTST.FOR \
ATN2.FOR \
ATRFRM.FOR \
ATRNRO.FOR \
ATRPOS.FOR \
AU1CMP.FOR \
AVECDF.FOR \
AVECTR.ASM \
AVIOL.FOR \
AVS1CK.FOR \
AVS1PT.FOR \
AVS2CK.FOR \
AXTABL.ASM \
AZCOR.FOR \
AZSURF.FOR \
AZVALU.FOR \
AZVECT.FOR \
BDYNDP.FOR \
BENCDPP.ASM \
BENDIX.FOR \
BENDIXPP.ASM \
BLOCK1.FOR \
BLOCK10.FOR \
BLOCK2.FOR \
BLOCK3.FOR \
BLOCK4.FOR \
BLOCK5.FOR \
BLOCK6.FOR \
BLOCK7.FOR \
BLOCK8.FOR \
BLOCK9.FOR \
BURGPP.ASM \
CAMRAV.FOR \
CERROR.FOR \
CHKRET.FOR \
CINCYPP.ASM \
CLPRNT.FOR \
CLSETP.ASM \
CMLOAD.FOR \
COMPU.FOR \
COMPU1.FOR \
COMPU2.FOR \
CONBCD.ASM \
CONCRDPP.ASM \
CORNER.FOR \
DDLIMT.FOR \
DISPAT.ASM \
DVLIEGPP.ASM \
DXDYV.FOR \
DYNPATPP.ASM \
ECSPP.ASM \
ELMPRE.FOR \
EXPOSTPP.ASM \
FOSDIKPP.ASM \
FP1P3.FOR \
FRAMEV.FOR \
GECENTPP.ASM \
GRID1V.FOR \
IATYPE.ASM \
IBCLAS.ASM \
IDEFTB.FOR \
INIT.ASM \
INITAL.FOR \
IXOR.ASM \
LERROR.FOR \
LINEV.FOR \
MATMOV.FOR \
MILWAKPP.ASM \
MSETUP.FOR \
MSHPRE.FOR \
MULTM.FOR \
Makefile \
Makefile.am \
Makefile.in \
NNTAIN.ASM \
NXV.FOR \
NYV.FOR \
PARNOM.ASM \
PATGEN.FOR \
PATGO.FOR \
PERSPC.FOR \
PL3AXS.FOR \
PL5AXS.FOR \
PLOT.FOR \
PLOTV.FOR \
PLTSET.FOR \
PRATTWPP.ASM \
PRINTV.FOR \
PROBOGPP.ASM \
PRTSET.FOR \
PTW4EPP.ASM \
PUNCHA.ASM \
PUNIDN.ASM \
SAM.ASM \
SAMPLE.PRO \
SC4020PP.ASM \
SECTN2.FOR \
SECTN3.FOR \
SECZROPP.ASM \
SETMIN.ASM \
SETUPP.FOR \
SHIFT.ASM \
SUNTRNPP.ASM \
TRACUT.FOR \
TRCPM.FOR \
TRCPV.FOR \
TRUNC.FOR \
TRUTRAPP.ASM \
TRWPP.ASM \
TSFMPT.FOR \
TSFMVC.FOR \
TYPE5.FOR \
USERTN.ASM \
VTLAXS.FOR \
XLOFTX.FOR \
XSCALV.FOR \
YSCALV.FOR 
