## Process this file with automake to produce Makefile.in


#ASFLAGS= -a #generate listings for assembler
AM_CPPFLAGS = -DTOP_BLD_DIR="$(absolute_build_dir)" \
	-DBINDIR="$(bindir)" 
LDADD= -lf2c 

bin_PROGRAMS=apt360 


apt360_SOURCES = A2CTRL.c \
	ABKKPR.c \
	ACALSP.c \
	ACANCK.c \
	ACANGT.c \
	ACANPT.c \
	ACCALL.c \
	ACCINT.c \
	ACENTR.c \
	ACLAS7.c \
	ACLS12.c \
	ACNTR2.c \
	ACNTRL.c \
	ACONE1.c \
	ACPLAN.c \
	ACPYTP.c \
	ACROSS.c \
	ACSCF.c \
	ACYLND.c \
	ADCLAR.c \
	ADDST.c \
	ADDSTR.c \
	ADDTB.c \
	ADECIS.c \
	ADELTA.c \
	ADIAGM.c \
	ADIAGP.c \
	ADOT.c \
	ADPRNT.c \
	ADSCF.c \
	AELHYP.c \
	AELP01.c \
	AEXPRS.c \
	AFWDSL.c \
	AGENCN.c \
	AGENPL.c \
	AGETSP.c \
	AGTSUB.c \
	AHELPR.c \
	AHYPR1.c \
	AINT.c \
	AINVRT.c \
	AJUNDD.c \
	ALCINT.c \
	ALFTCN.c \
	ALINE.c \
	ALLINT.c \
	ALNGTH.c \
	ALSFPT.c \
	AMATM.c \
	AMATMV.c \
	AMATX.c \
	AMD2.c \
	AMIND.c \
	AMOVE.c \
	ANAMLT.c \
	ANORM.c \
	ANRMAL.c \
	AOFSET.c \
	AORDP.c \
	APAREN.c \
	APLAN.c \
	APLANE.c \
	APLCNB.c \
	APLNEX.c \
	APOCKA.c \
	APOCKB.c \
	APOINT.c \
	APREPA.c \
	APREPB.c \
	APREPD.c \
	APREPR.c \
	APRFIX.c \
	APRINT.c \
	APTLFT.c \
	APTPUT.c \
	AQADR1.c \
	AQUAD.c \
	ARADAR.c \
	AREGPR.c \
	ARFSYS.c \
	ARGLST.c \
	ARITAP.c \
	ARLDS.c \
	ARLDSF.c \
	ARLM2.c \
	ARLM3.c \
	AROUTE.c \
	ARROW.c \
	ASCHTB.c \
	ASEC2A.c \
	ASEC2B.c \
	ASEC2C.c \
	ASEC2D.c \
	ASEGMT.c \
	ASELP.c \
	ASETUP.c \
	ASIMEQ.c \
	ASPHER.c \
	ASTOR.c \
	ASTORE.c \
	ASTOS.c \
	ASTSEL.c \
	ASTUF.c \
	ASTUP2.c \
	ASTYPE.c \
	ASWICH.c \
	ATABCR.c \
	ATABLN.c \
	ATABPT.c \
	ATAPE.c \
	ATDL.c \
	ATFMQD.c \
	ATFMVC.c \
	ATINKR.c \
	ATISEL.c \
	ATLSEG.c \
	ATLTST.c \
	ATN2.c \
	ATRFRM.c \
	ATRNRO.c \
	ATRPOS.c \
	AU1CMP.c \
	AVECDF.c \
	AVIOL.c \
	AVS1CK.c \
	AVS1PT.c \
	AVS2CK.c \
	AZCOR.c \
	AZSURF.c \
	AZVALU.c \
	AZVECT.c \
	BDYNDP.c \
	CAMRAV.c \
	CHKRET.c \
	CMLOAD.c \
	COMPU.c \
	COMPU1.c \
	COMPU2.c \
	CORNER.c \
	DDLIMT.c \
	DXDYV.c \
	ELMPRE.c \
	FP1P3.c \
	FRAMEV.c \
	GRID1V.c \
	IDEFTB.c \
	LERROR.c \
	LINEV.c \
	MATMOV.c \
	MSETUP.c \
	MSHPRE.c \
	MULTM.c \
	NXV.c \
	NYV.c \
	PATGEN.c \
	PERSPC.c \
	PL3AXS.c \
	PL5AXS.c \
	PLOT.c \
	PLOTV.c \
	PLTSET.c \
	PRINTV.c \
	PRTSET.c \
	SECTN2.c \
	SECTN3.c \
	SETUPP.c \
	TRACUT.c \
	TRCPM.c \
	TRCPV.c \
	TRUNC.c \
	TSFMPT.c \
	TSFMVC.c \
	TYPE5.c \
	XLOFTX.c \
	XSCALV.c  \
	ACCURV.c \
	ACHECK.c \
	ACIRCL.c \
	ACLAS5.c \
	ACOS.c \
	ADFPRE.c \
	ADFPRO.c \
	AERR.c \
	AFINI.c \
	AFLAGS.c \
	AGOUCK.c \
	AGTARG.c \
	AIFUN8.c \
	AINOUT.c \
	AMON1.c \
	AMON10.c \
	AMON11.c \
	AMON2.c \
	AMON3.c \
	AMON4.c \
	AMON5.c \
	AMON6.c \
	AMON7.c \
	AMON8.c \
	AMONTR.c \
	AMOTIN.c \
	ANEST.c \
	AOBTAN.c \
	APARAM.c \
	APLCN.c \
	APLCNA.c \
	APOCK.c \
	APOCK1.c \
	APREPC.c \
	APTLOD.c \
	AREAD.c \
	AREPRE.c \
	ARPDIS.c \
	ASCAN.c \
	ASCLPT.c \
	ASCNTL.c \
	ASEC2.c \
	ASEQAL.c \
	ASQILT.c \
	ASTRUP.c \
	ASYCTL.c \
	ATLNRM.c \
	BENDIX.c \
	BLOCK1.c \
	BLOCK10.c \
	BLOCK2.c \
	BLOCK3.c \
	BLOCK4.c \
	BLOCK5.c \
	BLOCK6.c \
	BLOCK7.c \
	BLOCK8.c \
	BLOCK9.c \
	CERROR.c \
	CLPRNT.c \
	INITAL.c \
	PATGO.c \
	VTLAXS.c \
	YSCALV.c \
	ABTSHL.ASM.c \
	ABUFTP.ASM.c \
	ABUILD.ASM.c \
	ACHEDT.ASM.c \
	ACRDPN.ASM.c \
	ADFPRL.ASM.S \
	ADPRNT.ASM.c \
	ADYNDP.ASM.c \
	AEXTRC.ASM.c \
	AFRDNL.ASM.c \
	AFRESH.ASM.c \
	APOLYR.ASM.c \
	APREAD.ASM.c \
	APTLNK.ASM.c \
	ARTIME.ASM.c \
	ASECT0.ASM.c \
	ASECT1.ASM.c \
	ASECT2.ASM.c \
	ASECT3.ASM.c \
	ASECT4.ASM.c \
	ASERCH.ASM.c \
	ATAPOP.ASM.c \
	ATAPRD.ASM.c \
	ATAPWT.ASM.c \
	ATAPXC.ASM.c \
	ATBLKP.ASM.c \
	AVECTR.ASM.c \
	AXTABL.ASM.c \
	BENCDPP.ASM.c \
	BENDIXPP.ASM.c \
	BURGPP.ASM.c \
	CINCYPP.ASM.c \
	CLSETP.ASM.c \
	CONBCD.ASM.c \
	CONCRDPP.ASM.c \
	DISPAT.ASM.c \
	DVLIEGPP.ASM.c \
	DYNPATPP.ASM.c \
	ECSPP.ASM.c \
	EXPOSTPP.ASM.c \
	FOSDIKPP.ASM.c \
	GECENTPP.ASM.c \
	IATYPE.ASM.c \
	IBCLAS.ASM.c \
	INIT.ASM.c \
	IXOR.ASM.c \
	MILWAKPP.ASM.c \
	NNTAIN.ASM.c \
	PARNOM.ASM.c \
	PRATTWPP.ASM.c \
	PROBOGPP.ASM.c \
	PTW4EPP.ASM.c \
	PUNCHA.ASM.c \
	PUNIDN.ASM.c \
	SAM.ASM.c \
	SC4020PP.ASM.c \
	SECZROPP.ASM.c \
	SETMIN.ASM.c \
	SHIFT.ASM.c \
	SUNTRNPP.ASM.c \
	TRUTRAPP.ASM.c \
	TRWPP.ASM.c \
	USERTN.ASM.c \
	main.c   \
	ASM.c 	\
	aptpos.c\
	endianmacs.h\
	ASM.h \
	AXTABL.ASM.h \
	export_surf.cpp \
	export_surf.h
	
